Automatically rewrite MIN / MAX on string col to MINSTRING / MAXSTRING